--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,3 +10,18 @@ services:
       - 8009:8000
     env_file:
       - ./app/.env.dev
+    depends_on:
+      - web-db 
+      
+
+  web-db:
+    image: postgres:14-alpine
+    volumes:
+      - postgres_data:/var/lib/postgresql/data/
+    environment:
+      - POSTGRES_USER=course
+      - POSTGRES_PASSWORD=course
+      - POSTGRES_DB=course_dev
+
+volumes:
+  postgres_data:
