--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -17,11 +17,12 @@ services:
   web-db:
     image: postgres:14-alpine
     volumes:
-      - postgres_data:/var/lib/postgresql/data/
+      - e-learning:/var/lib/postgresql/data/
     environment:
       - POSTGRES_USER=course
       - POSTGRES_PASSWORD=course
       - POSTGRES_DB=course_dev
 
 volumes:
-  postgres_data:
+  e-learning:
+    external: true
