--- a/app/requirements.txt
+++ b/app/requirements.txt
@@ -3,4 +3,6 @@ psycopg2-binary==2.8.6
 Pillow==8.4
 django-braces==1.14.0
 django-embed-video==1.3.2
+python-memcached==1.59
+django-memcache-status==2.2
 
