--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -22,6 +22,13 @@ services:
       - POSTGRES_USER=course
       - POSTGRES_PASSWORD=course
       - POSTGRES_DB=course_dev
+  
+  cache:
+    image: memcached
+    ports:
+      - "11211:11211"
+    
+
 
 volumes:
   e-learning:
