--- a/app/requirements.txt
+++ b/app/requirements.txt
@@ -6,4 +6,6 @@ django-embed-video==1.3.2
 python-memcached==1.59
 django-memcache-status==2.2
 djangorestframework==3.11.0
+requests==2.23
+channels==2.4.0
 
