setting up channel layer with Redis and updating consumer to broadcast messages

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -32,7 +32,16 @@ services:
       - memcached 
       - -m 64
       
+  redis:
+    image: redis:6-alpine 
+    restart: always
+    ports:
+      - "6379:6379"
+    command: redis-server 
     
+    
+
+
 
 
 volumes:
